--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ authors = ["Ken Van Haren <kenvanharen@gmail.com>"]
 description = "Plotly module for snapflow"
 license = "BSD-3-Clause"
 name = "snapflow-plotly"
-version = "0.1.0"
+version = "0.1.1"
 
 [tool.poetry.dependencies]
 plotly = "^4.14.3"
 python = "^3.7.4"
-snapflow = "~0.5.4"
+snapflow = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
